test/parser/error_recovery_fn.yl
// RUN: compiler %s 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:13: error: expected type specifier
fn error(): {}

fn main(): void {}

// CHECK: [[# @LINE + 1 ]]:12: error: expected ')'
fn error2( {}

fn error3(): void {

// CHECK: [[# @LINE + 1 ]]:1: error: expected '}' at the end of a block
fn pass(): number {}

// CHECK: FunctionDecl: main:void
// CHECK-NEXT:   Block
// CHECK-NEXT: FunctionDecl: pass:number
// CHECK-NEXT:   Block
